# CUDA_Filter

./: Dockerfile  start.sh
app/: pyproject.toml
app/app/: gauss.py  main.py  mediana.py  sobel.py  utils.py
front_cuda/: README.md  angular.json  package-lock.json  package.json
front_cuda/src/: index.html
front_cuda/src/app/: app.component.html  app.component.spec.ts  app.component.ts
front_cuda/src/app/cliente/: cliente.component.html  cliente.component.scss  cliente.component.ts
front_cuda/src/app/services/: cliente.service.ts
