[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Cosmic <andresbloc@hotmail.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
